# ml-learning

./: .gitignore  Eval-Project-Plan.md  GOOGLE_DRIVE_SETUP.md  MCP_PYTHON_SETUP.md  README.md  RESEARCH_PUBLICATION_PLAN.md  Safety_Text_Classifier_PRD.md  Stage3_Critique_Revision_System_PRD.md  twitter-30-day-content-calendar.md
artifacts/evaluation_artifacts/evaluation/final_results/: evaluation_base_20251005_061640.json  evaluation_results_20251005_061640.json  evaluation_stage2_helpful_20251005_061640.json  evaluation_stage3_constitutional_20251005_061640.json
artifacts/safety_text_classifier_trained_20250916_0632/: MODEL_INFO.md  colab_config.yaml  training_log.json
artifacts/stage2_artifacts/configs/: base_config.yaml  colab_config.yaml
artifacts/stage2_artifacts/lora_adapters/: README.md  adapter_config.json
artifacts/stage3_artifacts/: metrics.json
artifacts/stage3_artifacts/dpo_dataset/: train.jsonl
artifacts/stage3_artifacts/eval/: generated_eval.jsonl
artifacts/stage3_artifacts/models/lora_adapters/: adapter_config.json
artifacts/stage3_artifacts/pairs/: pairs.jsonl
artifacts/stage3_constitutional_artifacts/: metrics.json
artifacts/stage3_constitutional_artifacts/dpo_dataset/: train.jsonl
artifacts/stage3_constitutional_artifacts/models/lora_adapters/: adapter_config.json
artifacts/stage3_constitutional_artifacts/pairs/: pairs.jsonl
constitutional-ai-stage4/: .gitignore  README.md  pyproject.toml
constitutional-ai-stage4/artifacts/evaluation/: extended_test_prompts.jsonl  test_prompts.jsonl
constitutional-ai-stage4/artifacts/reports/: paper_alignment_analysis.md
constitutional-ai-stage4/configs/: evaluation_config.yaml
constitutional-ai-stage4/notebooks/: Run_Evaluation_Colab.ipynb
constitutional-ai-stage4/scripts/: create_extended_test_set.py  preflight_check.py
constitutional-ai-stage4/src/analysis/: create_boxplots.py  create_comparison_bars.py  create_radar_chart.py  effect_sizes.py  statistical_tests.py
constitutional-ai-stage4/src/evaluation/: README.md  base_evaluator.py  constitutional_evaluators.py  evaluation_runner.py
constitutional-ai-stage4/src/inference/: README.md  model_loader.py  validate_setup.py
critique-revision-system/: README.md  pyproject.toml
critique-revision-system/configs/: constitutional_principles.yaml
critique-revision-system/notebooks/: STAGE3_NOTEBOOK_CHANGES.md  Stage3_Constitutional_Training.ipynb  Stage3_Constitutional_Training_v2.ipynb  Stage3_DPO_Colab.ipynb
critique-revision-system/scripts/: analyze_pairs.py
critique-revision-system/src/: __init__.py  critique_revision.py
critique-revision-system/src/evaluation/: constitutional_evaluators.py
critique-revision-system/src/training/: critique_revision.py  data_quality.py  train_dpo.py  train_dpo_stage3.py
docs/: Personal_MicroGPT_Constitutional_AI_Implementation_Plan.md  STAGE3_IMPROVEMENT_PLAN.md  STAGE4_IMPLEMENTATION_PLAN.md  Safety_Text_Classifier_PRD.md  Stage2_Helpful_Response_Finetuning_PRD.md  Stage3_Critique_Revision_System_PRD.md  projects.md
helpful-finetuning/: README.md  pyproject.toml
helpful-finetuning/configs/: base_config.yaml  colab_config.yaml
helpful-finetuning/notebooks/: Stage2_Gemma7B_QLoRA_Colab.ipynb  Stage2_Helpful_Training.ipynb  train_colab.py
helpful-finetuning/scripts/: run_app.sh  run_training.sh
helpful-finetuning/src/: __init__.py
helpful-finetuning/src/evaluation/: evaluate_helpfulness.py
helpful-finetuning/src/inference/: generate.py
helpful-finetuning/src/training/: train_qlora.py
helpful-finetuning/src/utils/: data_utils.py  safety_integration.py
helpful-finetuning/streamlit_app/: app.py
piano-analysis-model/: .gitignore  CITATION.cff  README.md  analyze_colab_results.py  requirements.txt  setup_uv.sh  test_implementation.py
piano-analysis-model/docs/: CHOPIN_LISZT_DATA_COLLECTION_GUIDE.md  NEXT_STEPS_GUIDE.md  ROADMAP.md  TASKS.md
piano-analysis-model/results/: Beethoven_WoO80_var27_8bars_3_15_correlation_analysis.json  Beethoven_WoO80_var27_8bars_3_15_preprocessed.json  dataset_analysis.json  extreme_performances_analysis.json  percepiano_correlations.csv  percepiano_insights.json  percepiano_labels_processed.csv  preprocessing_robustness_test.json  timing_model_params.pkl  timing_model_results.json
safety-text-classifier/: .gitignore  Dockerfile  README.md  colab_navigation_helper.py  debug_model.py  demo_app.py  evaluate_model.py  pyproject.toml  quick_demo.py  quick_test.py  requirements-colab.txt  requirements.txt  serve.py  test_classify_error.py  test_demo.py  test_training.py  train.py  validate_model.py
safety-text-classifier/configs/: base_config.yaml  colab_config.yaml  test_config.yaml
safety-text-classifier/docs/: getting-started.md
safety-text-classifier/k8s/: deployment.yaml  hpa.yaml  namespace.yaml
safety-text-classifier/notebooks/: Safety_Text_Classifier_Training.ipynb  colab_training.ipynb  colab_training.ipynb.backup
safety-text-classifier/scripts/: debug_model.py  demo_app.py  evaluate_model.py  quick_demo.py  quick_test.py  serve.py  train.py  validate_model.py
safety-text-classifier/src/: colab_setup.py  demo.py
safety-text-classifier/src/data/: dataset_loader.py
safety-text-classifier/src/evaluation/: __init__.py  metrics.py
safety-text-classifier/src/models/: calibration.py  transformer.py  utils.py  utils_old.py  validation.py  visualization.py
safety-text-classifier/src/serving/: __init__.py  inference_server.py
safety-text-classifier/src/training/: __init__.py  trainer.py
safety-text-classifier/tests/: test_classify_error.py  test_colab_fixes.py  test_demo.py  test_model.py  test_training.py
