[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constitutional-ai-stage4"
version = "0.1.0"
description = "Stage 4: Constitutional AI Evaluation and Analysis"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "transformers>=4.40.2,<5.0.0",
  "datasets>=2.19.1,<3.0.0",
  "peft>=0.9.0",
  "accelerate>=0.28.0,<1.0.0",
  "trl>=0.9.6",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "scikit-learn>=1.3.0",
  "gradio>=4.0.0",
  "sentencepiece",
  "safetensors",
  "jupyter",
  "ipywidgets",
]

[dependency-groups]
dev = [
  "black>=24.4.0,<25.0.0",
  "ruff>=0.4.0,<0.6.0",
  "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
