[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "critique-revision-system"
version = "0.1.0"
description = "Stage 3: Critique & Revision loop for Constitutional AI pipeline"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.40.2,<5.0.0",
  "datasets>=2.19.1,<3.0.0",
  "peft>=0.9.0",
  "accelerate>=0.28.0,<1.0.0",
  "torch>=2.1",
  "trl>=0.9.6",
  "sentencepiece",
  "safetensors",
]

[dependency-groups]
dev = [
  "black>=24.4.0,<25.0.0",
  "ruff>=0.4.0,<0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
