[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safety-text-classifier"
version = "0.1.0"
description = "Constitutional AI Safety Text Classifier"
authors = [{name = "ML Learning Project", email = "ml@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML Framework - Compatible versions
    "numpy>=1.24.4,<2.0",
    "jax[cpu]>=0.4.28,<0.5.0",
    "flax>=0.8.4,<0.9.0",
    "optax>=0.2.2,<0.3.0",
    
    # Data and Text Processing - Fixed compatibility
    "datasets>=2.19.1,<3.0.0",
    "transformers>=4.40.2,<5.0.0",
    "tokenizers>=0.19.0,<0.20.0",  # Fixed: Compatible with transformers 4.40.2
    "pandas>=2.0.3,<3.0.0",
    
    # Experiment Tracking and Visualization
    "wandb>=0.17.0,<1.0.0",
    "matplotlib>=3.7.5,<4.0.0",
    "seaborn>=0.12.2,<1.0.0",
    "plotly>=5.17.0,<6.0.0",
    
    # Web Interface and Serving
    "gradio>=4.26.0,<5.0.0",
    "streamlit>=1.33.0,<2.0.0",
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.7.1,<3.0.0",
    
    # Evaluation and Metrics
    "scikit-learn>=1.3.2,<2.0.0",
    "scipy>=1.10.1,<2.0.0",
    
    # Cloud and Monitoring
    "google-cloud-storage>=2.16.0,<3.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    
    # Utilities
    "tqdm>=4.66.4,<5.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1,<9.0.0",
    "black>=24.4.0,<25.0.0",
    "flake8>=7.0.0,<8.0.0",
    "jupyter>=1.0.0,<2.0.0",
]

# Colab-specific dependencies (lightweight for training)
colab = [
    "numpy>=1.24.4,<2.0",
    "jax[cpu]>=0.4.28,<0.5.0",
    "flax>=0.8.4,<0.9.0",
    "optax>=0.2.2,<0.3.0",
    "datasets>=2.19.1,<3.0.0",
    "transformers>=4.40.2,<5.0.0",
    "tokenizers>=0.19.0,<0.20.0",
    "pandas>=2.0.3,<3.0.0",
    "wandb>=0.17.0,<1.0.0",
    "matplotlib>=3.7.5,<4.0.0",
    "seaborn>=0.12.2,<1.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "scipy>=1.10.1,<2.0.0",
    "tqdm>=4.66.4,<5.0.0",
    "pyyaml>=6.0.1,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/ml-learning/safety-text-classifier"
Repository = "https://github.com/ml-learning/safety-text-classifier"
Issues = "https://github.com/ml-learning/safety-text-classifier/issues"

[project.scripts]
safety-classify = "scripts.quick_demo:main"
safety-train = "scripts.train:main"
safety-serve = "scripts.serve:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.1.1,<9.0.0",
    "black>=24.4.0,<25.0.0",
    "flake8>=7.0.0,<8.0.0",
    "jupyter>=1.0.0,<2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "dist"]